ngc-pod/ngc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ngc-pod
  labels:
    app: ngc-pod
  namespace: openshift-gitops
spec:
  securityContext:
    runAsNonRoot: false
  containers:
    - name: ngc-pod
      image: 'denkay123/dk:tensorflow-19.10-py3'
      ports:
        - name: jupyter
          containerPort: 8888
          protocol: TCP
        - name: ssh
          containerPort: 22
          protocol: TCP
        - containerPort: 80
      command: ["/bin/bash", "-c"]
      args:
        - sleep 3000;
