ngc-pod/ngc-pod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngc-pod
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ngc-pod
  ports:
    - name: jupyter
      protocol: TCP
      port: 80
      targetPort: 8888
