ngc-pod/ngc-pod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngc-pod
  namespace: openshift-gitops
spec:
  type: ClusterIP
  selector:
    app: ngc-pod
  ports:
    - name: jupyter
      protocol: TCP
      port: 8888
      targetPort: 80
