ngc-pod/ngc-pod-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ngc
  namespace: openshift-gitops
spec:
  host: ngc-default.apps.ocp4.nh.com
  to:
    kind: Service
    name: ngc-pod
  port:
    targetPort: jupyter
